Add user types details to issue #1

--- a/issues/1.md
+++ b/issues/1.md
@@ -1,20 +1,8 @@
-### App Concept: “GardenGo” 🌿
+### User Types
 
-#### What It Does
-
-**On-demand Gardening Services:**
-Facilitating tasks such as:
-- Lawn mowing
-- Weeding
-- Tree trimming
-- Mulching
-- Leaf cleanup
-- Plant installation
-- Green waste hauling
-- Seasonal yard cleaning
-
-#### How It Works:
-1. **For Users:**
-   Request dedicated gardeners for tasks with an intuitive App UI.
-   - Geolocation-finding closest gardening teams.
-   - "Schedule
+#### 1️⃣ Customers (Homeowners)
+- Book gardeners
+- Schedule services
+- Track arrival
+- Pay in-app
+- Rate gardeners
