Updated issue #1 with detailed task list.

--- a/issues/1.md
+++ b/issues/1.md
@@ -1,8 +1,16 @@
-### User Types
+### Tasks:
 
-#### 1️⃣ Customers (Homeowners)
-- Book gardeners
-- Schedule services
-- Track arrival
-- Pay in-app
-- Rate gardeners
+#### Features
+- Design wireframes for the app layout.
+- Develop user registration and login for Homeowners.
+- Implement booking functionality for gardening services.
+- Add in-app payment integration.
+- Build rating and review system for completed jobs.
+
+#### User Types
+- Define core functionalities for Gardeners (e.g., accept or decline jobs, manage availability).
+- Outline admin panel requirements for overall platform management.
+
+#### Testing
+- Write automated tests for essential features.
+- Conduct usability testing for the homeowner booking process.
