Updated the content of issues/1.md

--- a/issues/1.md
+++ b/issues/1.md
@@ -1,3 +1,32 @@
+### App Concept: “GardenGo” 🌿
+
+#### What It Does
+**On-demand Gardening Services:**
+- Lawn mowing
+- Weeding
+- Tree trimming
+- Mulching
+- Leaf cleanup
+- Plant installation
+- Green waste hauling
+- Seasonal yard cleaning
+
+### User Types
+
+#### 1️⃣ Customers (Homeowners)
+- Book gardeners
+- Schedule services
+- Track arrival
+- Pay in-app
+- Rate gardeners
+
+#### 2️⃣ Gardeners (Service Providers)
+- Accept jobs
+- Set availability
+- See job details
+- Get paid
+- Manage earnings
+
 ### Tasks:
 
 #### Features
