Update issues/1.md with app concept and features for GardenGo

--- a/issues/1.md
+++ b/issues/1.md
@@ -27,6 +27,13 @@
 - Get paid
 - Manage earnings
 
+#### 3️⃣ Admin (You)
+- Manage users
+- Set pricing rules
+- Dispute resolution
+- Monitor activity
+- Payout management
+
 ### Tasks:
 
 #### Features
