Update issues/1.md with new app concept details.

--- a/issues/1.md
+++ b/issues/1.md
@@ -50,3 +50,14 @@
 #### Testing
 - Write automated tests for essential features.
 - Conduct usability testing for the homeowner booking process.
+
+### Roadmap
+- **MVP (Weeks 1-4):** Landing + auth (homeowners/gardeners), service catalog, booking flow, availability, basic payments (Stripe test), job status updates, basic admin dashboard (users, pricing, manual payouts).
+- **v1.1 (Weeks 5-8):** Ratings/reviews, in-app notifications, rescheduling, promo codes, payout automation, gardener earnings dashboard, calendar sync.
+- **v2 (Weeks 9-12):** Route optimization, subscription plans, bundled services, in-app chat, before/after photos, dispute tooling.
+
+### Sprint Plan (owners TBD)
+- **Sprint 1:** Design wireframes; auth flows (homeowner/gardener); service catalog.
+- **Sprint 2:** Booking flow; availability calendar; job details; basic admin (users, pricing).
+- **Sprint 3:** Payments (checkout + payouts beta); status updates/notifications; rating/review MVP.
+- **Sprint 4:** Automated tests (booking/payments); usability test homeowner booking; polish admin panel.
