Update the file issues/1.md with the app concept and tasks

--- a/issues/1.md
+++ b/issues/1.md
@@ -34,22 +34,40 @@
 - Monitor activity
 - Payout management
 
-### Tasks:
+### Tasks (with owners, estimates, and acceptance criteria)
 
 #### Features
-- Design wireframes for the app layout.
-- Develop user registration and login for Homeowners.
-- Implement booking functionality for gardening services.
-- Add in-app payment integration.
-- Build rating and review system for completed jobs.
+- **Design wireframes for the app layout.**
+  - Owner: TBD | Estimate: 3d
+  - Acceptance: Clickable wireframes for homeowner, gardener, and admin flows covering onboarding, booking, availability, payments, and basic admin views.
+- **Develop user registration and login for Homeowners.**
+  - Owner: TBD | Estimate: 3d
+  - Acceptance: Email/password sign-up/login; password reset; session persistence; basic validation; success/failure states covered by tests.
+- **Implement booking functionality for gardening services.**
+  - Owner: TBD | Estimate: 4d
+  - Acceptance: Homeowner can select service, date/time, location; create booking; see confirmation; booking stored with status (requested/accepted/in-progress/completed/cancelled).
+- **Add in-app payment integration.**
+  - Owner: TBD | Estimate: 4d
+  - Acceptance: Stripe test mode checkout; tokenized payment method saved; charge on job start/complete (per chosen flow); error handling; receipts stored.
+- **Build rating and review system for completed jobs.**
+  - Owner: TBD | Estimate: 3d
+  - Acceptance: Post-completion rating (1–5) and optional text review; displayed on gardener profile; prevents duplicate reviews per job.
 
 #### User Types
-- Define core functionalities for Gardeners (e.g., accept or decline jobs, manage availability).
-- Outline admin panel requirements for overall platform management.
+- **Define core functionalities for Gardeners (accept/decline jobs, manage availability).**
+  - Owner: TBD | Estimate: 3d
+  - Acceptance: Gardener can set availability calendar; view incoming requests; accept/decline; status updates propagate to homeowner.
+- **Outline admin panel requirements for overall platform management.**
+  - Owner: TBD | Estimate: 2d
+  - Acceptance: Documented admin needs: user management, pricing rules, dispute queue, payout approvals/automation hooks, audit logs.
 
 #### Testing
-- Write automated tests for essential features.
-- Conduct usability testing for the homeowner booking process.
+- **Write automated tests for essential features.**
+  - Owner: TBD | Estimate: 3d
+  - Acceptance: Coverage for auth, booking creation, status transitions, and payments (mocked gateway); tests run in CI.
+- **Conduct usability testing for the homeowner booking process.**
+  - Owner: TBD | Estimate: 2d
+  - Acceptance: Run at least 5 user sessions; capture friction points; produce a short report with prioritized fixes.
 
 ### Roadmap
 - **MVP (Weeks 1-4):** Landing + auth (homeowners/gardeners), service catalog, booking flow, availability, basic payments (Stripe test), job status updates, basic admin dashboard (users, pricing, manual payouts).
