Updated issues/1.md with new content

--- a/issues/1.md
+++ b/issues/1.md
@@ -45,10 +45,20 @@
   - Acceptance: Email/password sign-up/login; password reset; session persistence; basic validation; success/failure states covered by tests.
 - **Implement booking functionality for gardening services.**
   - Owner: TBD | Estimate: 4d
-  - Acceptance: Homeowner can select service, date/time, location; create booking; see confirmation; booking stored with status (requested/accepted/in-progress/completed/cancelled).
+  - Acceptance:
+    - Homeowner can select service, date/time, location; create booking; see confirmation.
+    - Booking stored with status (requested/accepted/in-progress/completed/cancelled).
+    - Prevent double-booking of a gardener time slot; handle unavailable slot errors gracefully.
+    - Allow reschedule/cancel rules (time cutoff configurable); notify gardener on changes.
+    - Edge cases: invalid address, missing payment method, expired session, or conflicting availability all return clear errors.
 - **Add in-app payment integration.**
   - Owner: TBD | Estimate: 4d
-  - Acceptance: Stripe test mode checkout; tokenized payment method saved; charge on job start/complete (per chosen flow); error handling; receipts stored.
+  - Acceptance:
+    - Stripe test mode checkout; tokenized payment method saved; PCI-sensitive data never touches our servers.
+    - Charge flow defined (on job start vs completion) and implemented consistently; idempotent charge requests.
+    - Handle card failures (insufficient funds, 3DS required, expired card) with retry/alternate payment path.
+    - Store receipts; surface charge status and history on homeowner and admin views.
+    - Refund/adjustment path documented; disputes flagged to admin queue; payouts only after successful charge capture.
 - **Build rating and review system for completed jobs.**
   - Owner: TBD | Estimate: 3d
   - Acceptance: Post-completion rating (1–5) and optional text review; displayed on gardener profile; prevents duplicate reviews per job.
